# toralizer

./: CMakeLists.txt  README.md  toralize.c  toralize.h
